Bug 865684 - [markup view] Higher Contrast for selected node. r=mikeratcliffe
UltraBlame original commit: 9ff218b84720678168ba8a7f2678d4ccdf84b972

--- a/browser/themes/shared/devtools/markup-view.css
+++ b/browser/themes/shared/devtools/markup-view.css
@@ -75,23 +75,6 @@ cursor
 pointer
 ;
 }
-.
-selected
-{
-background
--
-color
-:
-hsl
-(
-0
-0
-%
-90
-%
-)
-;
-}
 /
 *
 Give
